Fix styling for light/dark mode

--- a/minigames/typing_practice_hub/typing_practice/numbers/numbers.css
+++ b/minigames/typing_practice_hub/typing_practice/numbers/numbers.css
@@ -7,29 +7,6 @@ body {
   padding: 0;
 }
 
-.top-right {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.home-button {
-  display: inline-block;
-  background-color: rosybrown;
-  color: aliceblue;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-}
-
-.home-button:hover {
-  background-color: lavenderblush;
-  color: darksalmon;
-}
-
 h1 {
   margin-top: 20px;
 }
@@ -56,5 +33,37 @@ h1 {
 
 p {
   color: gold;
+  margin-top: 50px;
+}
+
+
+.toggle-btn {
+  margin: 20px;
+  margin-top: 50px;
+  padding: 10px 15px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: darkgray;
+  color: black;
+}
+
+body[data-theme="light"] .toggle-btn {
+  background-color: rgba(197, 109, 109, 0.863);
+  color: lavenderblush;
+}
+
+body[data-theme="light"] {
+  font-family: Arial, sans-serif;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(187, 187, 206);
+}
+
+body[data-theme="light"] p {
+  color: rgb(52, 28, 53);
   margin-top: 50px;
 }
